me MainApp class to Game, CFPS to FPS and CEvent to Events reorganize functions around Game class and main.cpp (because it's more sequencial code than object) implement FPS printout in window title performance optimization : allocate smallest possible Surface size for polygons (insteed of all window) : 30 --> 50 FPS

--- a/TODO
+++ b/TODO
@@ -39,6 +39,8 @@ Add doc folder to repository
 Add anonymous clone to main GIT repository (hosted on git.epfl.ch)
 use template for heterogeneous collection
 heterogeneous collection shoold be a class
+inherit airplane and cloud move from a common interface
+optimize to get the highest possible FPS
 
 -----  DONE  -----
 
