--- a/README
+++ b/README
@@ -5,6 +5,14 @@ course on object-oriented programming in C++ at EPFL (CS-118).
 It simulates an (obviously simplified) Air Traffic Control workstation like the
 ones operators play in reality (for example at Skyguide).
 
+-----  PROJECT GOAL  -----
+
+The goal of this project was mainly C++ training. We focused on C++11
+improvements and new features, as it makes this language more powerful, and
+easier to use for application development. We also focused on the toolkit, using
+of course gcc, netbeans, but also git and clang. We tried as much as possible to
+follow design patterns and best practices.
+
 -----  AUTHORS  -----
 
 Michaël Defferrard, michael.defferrard@epfl.ch
